--- a/app/src/main/res/layout/fragment_bienvenida.xml
+++ b/app/src/main/res/layout/fragment_bienvenida.xml
@@ -90,6 +90,8 @@
             android:textColor="#D50000"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:stateListAnimator="@null"
+            android:elevation="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
