Tu mensaje de actualización

--- a/app/src/main/res/layout/fragment_rate_estimation.xml
+++ b/app/src/main/res/layout/fragment_rate_estimation.xml
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
-                    android:layout_marginTop="-50dp"
+                    android:layout_marginTop="-60dp"
                     android:text="Tipo de Envío"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="12sp" />
@@ -63,6 +63,7 @@
                 android:id="@+id/package_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="40dp"
@@ -121,15 +122,16 @@
                     android:layout_height="1dp"
                     android:background="@android:color/darker_gray"
                     android:layout_marginTop="16dp" />
+
                 <TextView
                     android:id="@+id/label_origen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:text="Punto de Origen"
                     android:textSize="12sp"
-                    android:textColor="@android:color/darker_gray"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginStart="4dp"/>
+                    android:layout_marginLeft="45dp"
+                    android:textColor="@android:color/darker_gray" />
 
                 <ImageView
                     android:id="@+id/location_icon_start"
@@ -143,39 +145,69 @@
 
                 <Spinner
                     android:id="@+id/spinner_origen"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:entries="@array/puntos_origen_array"
                     android:prompt="@string/select_punto_origen"
                     style="@style/Widget.AppCompat.Spinner.Underlined"
-                    android:layout_marginStart="8dp" />
-
-
-
-                <Spinner
-                    android:id="@+id/spinner_destino"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:entries="@array/puntos_destino_array" android:prompt="@string/select_punto_destino"
-                    style="@style/Widget.AppCompat.Spinner.Underlined"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@id/location_icon_start"
-                    app:layout_constraintEnd_toStartOf="@id/route_line_indicator"
-                    app:layout_constraintTop_toBottomOf="@id/spinner_origen" />
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginTop="-30dp"
+                     />
 
                 <TextView
                     android:id="@+id/label_destino"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginTop="10dp"
                     android:text="Punto de Llegada"
                     android:textSize="12sp"
-                    android:textColor="@android:color/darker_gray"
-                    app:layout_constraintStart_toStartOf="@id/spinner_destino"
-                    app:layout_constraintTop_toTopOf="@id/spinner_destino"
-                    android:layout_marginTop="-16dp"
-                    android:layout_marginStart="4dp"/>
+                    android:textColor="@android:color/darker_gray" />
 
+                <Spinner
+                    android:id="@+id/spinner_destino"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginRight="40dp"
+                    android:entries="@array/puntos_destino_array"
+                    android:prompt="@string/select_punto_destino"
+                    style="@style/Widget.AppCompat.Spinner.Underlined" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="5dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="375dp"
+                android:layout_marginTop="-120dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/route_line_indicator"
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
+
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="50dp"
+                        android:background="@drawable/outline_adjust_24" />
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:layout_marginTop="50dp"
+                        android:background="@android:color/holo_red_dark"
+                        />
+                    <View
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        android:background="@drawable/outline_adjust_24" />
+                </LinearLayout>
 
             </LinearLayout>
             <LinearLayout
@@ -183,8 +215,65 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
+                <View
+                    android:id="@+id/divider2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/spinner_destino" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S/"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/holo_red_dark" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/rate_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S/ 8.00"
+                    android:textSize="32sp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btn_continue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Continuar"
+                    android:backgroundTint="@android:color/holo_red_dark"
+                    android:textColor="@android:color/white"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </LinearLayout>
+
+
+
+
         </LinearLayout>
 
 
