--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -16,10 +16,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
+            android:contentDescription="Botón de retroceso"
             android:padding="8dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:contentDescription="Botón de retroceso" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
             android:id="@+id/iv_lock"
@@ -58,15 +59,17 @@
             android:id="@+id/et_password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:cursorVisible="false"
+            android:focusableInTouchMode="false"
             android:inputType="numberPassword"
             android:maxLength="4"
+            android:padding="10dp"
             android:textAlignment="center"
             android:textSize="32sp"
-            android:focusableInTouchMode="false" android:cursorVisible="false"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_label_clave"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_label_clave"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <GridLayout
             android:id="@+id/keyboard_grid"
