--- a/app/src/main/res/layout/dropdown_item_grey.xml
+++ b/app/src/main/res/layout/dropdown_item_grey.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    android:id="@+id/dropdown_item_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp"
-    android:textColor="#757575"
-    android:background="@android:color/white"
-    android:textSize="16sp" />
+    android:padding="16dp"
+    android:textColor="@android:color/black"
+    android:textSize="16sp"
+    android:ellipsize="end"
+    android:maxLines="1" />
