--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="red">#D32F2F</color>
     <color name="gray_switch">#BDBDBD</color>
     <color name="gray_light">#EEEEEE</color>
+    <color name="nav_item_color">#000000</color>
 </resources>
