--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,17 +4,29 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/bienvenidaFragment">
 
-    <!-- BIENVENIDA (PANTALLA INICIAL) -->
+    <!-- BIENVENIDA -->
     <fragment
         android:id="@+id/bienvenidaFragment"
         android:name="com.example.logistiq.fragments.BienvenidaFragment"
         android:label="Bienvenida" />
+
+    <!-- TIPO DE PRODUCTO -->
+    <fragment
+        android:id="@+id/tipoProductoFragment"
+        android:name="com.example.logistiq.gestion.TipoProductoFragment"
+        android:label="Tipo de Producto">
+
+        <action
+            android:id="@+id/action_tipoProducto_to_sender"
+            app:destination="@id/senderFragment" />
+    </fragment>
 
     <!-- REMITENTE -->
     <fragment
         android:id="@+id/senderFragment"
         android:name="com.example.logistiq.gestion.SenderFragment"
         android:label="Remitente">
+
         <action
             android:id="@+id/action_sender_to_recipient"
             app:destination="@id/recipientFragment" />
@@ -24,5 +36,13 @@
     <fragment
         android:id="@+id/recipientFragment"
         android:name="com.example.logistiq.gestion.RecipientFragment"
-        android:label="Destinatario" />
+        android:label="Destinatario">
+
+        <action
+            android:id="@+id/action_recipient_to_inicio"
+            app:destination="@id/tipoProductoFragment"
+            app:popUpTo="@id/tipoProductoFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
 </navigation>
