--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- res/drawable/ic_sobre.xml -->
+    <!-- res/drawable/ic_arrow_right.xml -->
     <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="40dp"
-        android:height="40dp"
+        android:width="32dp"
+        android:height="32dp"
         android:viewportWidth="24"
         android:viewportHeight="24">
 
         <path
             android:fillColor="#D32F2F"
-            android:pathData="M20,4H4C2.9,4 2,4.9 2,6v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6C22,4.9 21.1,4 20,4zM20,8l-8,5l-8,-5V6l8,5l8,-5V8z"/>
+            android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8L12,4z"/>
     </vector>
 </selector>
