--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- res/drawable/ic_sobre.xml -->
     <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="40dp"
-        android:height="40dp"
+        android:width="24dp"
+        android:height="24dp"
         android:viewportWidth="24"
         android:viewportHeight="24">
-
         <path
-            android:fillColor="#D32F2F"
-            android:pathData="M20,4H4C2.9,4 2,4.9 2,6v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6C22,4.9 21.1,4 20,4zM20,8l-8,5l-8,-5V6l8,5l8,-5V8z"/>
+            android:fillColor="#757575"
+            android:pathData="M19,4h-3.5l-1-1h-5l-1,1H5v2h14M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2-0.9 2-2V7H6v12z" />
     </vector>
+
 </selector>
